[package]
name = "rocket-validation"
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/somehowchris/rocket-validation"
keywords = ["rocket", "validation", "json", "data", "validator"]
categories = ["web-programming"]
rust-version = "1.59.0"
description = "Rocket Guards to support validation using validator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.4", default-features = false, features = [
    "json",
] }
validator = { version = "0.16.1", features = ["derive"] }

[[example]]
name = "json-validation"
path = "examples/json-validation/src/main.rs"

[[example]]
name = "query-validation"
path = "examples/query-validation/src/main.rs"

[[example]]
name = "form-validation"
path = "examples/form-validation/src/main.rs"
